<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/image_Descrioption"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name"
        style="@style/nameStyle" />

    <EditText
        android:id="@+id/enter_hobbies"
        style="@style/generalWidgetStyle"
        android:hint="@string/hobby_hint"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/done_button"
        style="@style/generalWidgetStyle"
        android:onClick="addHobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/done"
        android:textSize="14sp"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/hobbies_text"
        style="@style/generalStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            style="@style/generalStyle"
            android:text="@string/my_bio" />
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>